fixed cascade type to persist